--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         }
     ],
     "autoload": {
-        "psr-4": {}
+        "files": ["src/Differ.php"]
     },
     "bin": [
         "bin/gendiff"
@@ -16,7 +16,16 @@
     "minimum-stability": "stable",
     "name": "hexlet/code",
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "tightenco/collect": "^8.34",
+        "funct/funct": "^1.5",
+        "lstrojny/functional-php": "^1.17"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.6"
+    },
+    "scripts": {
+        "phpcs": "phpcs --standard=PSR12 src bin"
     },
     "type": "project"
 }
