--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,13 @@
         "lstrojny/functional-php": "^1.17"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6",
-        "phpunit/phpunit": "^9.5"
+        "phpstan/phpstan": "^0.12.85"
     },
     "scripts": {
-        "phpcs": "phpcs --standard=PSR12 src bin"
+        "phpcs": "phpcs --standard=PSR12 src bin",
+        "test": "phpunit tests"
     },
     "type": "project"
 }
