--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "psr-4": {
             "Test\\": "tests"
         },
-        "files": ["src/Differ.php"]
+        "files": ["src/Differ.php",
+        "src/Parsers.php"]
     },
     "bin": [
         "bin/gendiff"
@@ -22,7 +23,8 @@
         "docopt/docopt": "^1.0",
         "tightenco/collect": "^8.34",
         "funct/funct": "^1.5",
-        "lstrojny/functional-php": "^1.17"
+        "lstrojny/functional-php": "^1.17",
+        "symfony/yaml": "^5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
