added parser, added formatters [stylish, plain, json]

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,14 @@
         "psr-4": {
             "Test\\": "tests"
         },
-        "files": ["src/Differ.php",
-        "src/Parsers.php"]
+        "files": [
+            "src/Differ.php",
+            "src/Parsers.php",
+            "src/Formatters/Stylish.php",
+            "src/Formatters/Plain.php",
+            "src/Formatters/Json.php",
+            "src/Formatters.php"
+        ]
     },
     "bin": [
         "bin/gendiff"
