--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
             "src/Formatters/Stylish.php",
             "src/Formatters/Plain.php",
             "src/Formatters/Json.php",
-            "src/Formatters.php"
+            "src/Formatters.php",
+            "src/Misc.php"
         ]
     },
     "bin": [
